--- a/nginx/conf.d/converter.conf
+++ b/nginx/conf.d/converter.conf
@@ -7,11 +7,11 @@ server {
     server_name _;
 
     location /static/ {
-        alias /tosti/static/;
+        alias /converter/static/;
     }
 
     location /media/ {
-        alias /tosti/media/;
+        alias /converter/media/;
     }
 
     location / {
